# kkaak

./: .env.example  .gitignore  FINNHUB_QUICKSTART.md  KOREA_TIME_GUIDE.md  LLM_ANALYSIS_QUICKSTART.md  QUICKSTART.md  README.md  collect_news.py  collect_prices.py  main.py  pyproject.toml  requirements.txt  run.sh  test_finnhub_api.py  test_llm_analysis.py  test_massive_api.py  test_pipeline.py
config/: stocks.yaml  trading_rules.yaml
src/analysis/: __init__.py  backtester.py  llm_agent.py  models.py  prompt_templates.py
src/data/: __init__.py  models.py  news_collector.py  price_collector.py
src/notification/: discord_notifier.py
src/pipeline/: __init__.py  analysis_workflow.py  position_tracker.py  scheduler.py  signal_manager.py
src/utils/: __init__.py  config_loader.py  error_handler.py  exceptions.py
